--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "contentful": "^7.11.0",
     "core-js": "^3.4.3",
     "dns": "^0.2.2",
     "nodemailer": "^6.4.2",
