--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "contentful": "^7.11.0",
     "core-js": "^3.4.3",
     "dns": "^0.2.2",
+    "moment": "^2.24.0",
     "nodemailer": "^6.4.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
